# cmake-example

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitmodules  LICENSE  README.md
example_app/: CMakeLists.txt
example_app/src/: main.c
example_lib/: CMakeLists.txt
example_lib/inc/example_lib/: example.h
example_lib/src/: example.c
